# PalletProof

./: .gitattributes  .gitignore  README.md  config.example.toml  pyproject.toml
cad/: README.md  generate_palletproof_enclosure.py
cad/stl/: palletproof_enclosure_assembly_preview.stl  palletproof_enclosure_base.stl  palletproof_enclosure_lid.stl  palletproof_wall_mount_plate.stl
docs/: backend-platform.md  gdpr-privacy-strategy.md  pricing-proposal.md  supabase-setup.md
scripts/: install_from_github.sh
src/pallet_video_recorder/: __main__.py  app.py  barcode.py  camera.py  cloud.py  config.py  filenames.py  hardware_scanner.py  log_safety.py  motion.py  preview.py  privacy.py  provisioning.py  scanner.py  scanner_schedule.py  software_update.py  sound.py  status_light.py  uploader.py
supabase/: README.md
supabase/migrations/: 20260723140000_initial_palletproof_schema.sql  20260723153000_activation_token_admin_policy.sql  20260724001000_current_memberships_rpc.sql  20260724013000_device_activation_heartbeat_rpc.sql  20260724022000_rename_video_order_to_scanned_id.sql  20260724023000_supabase_video_upload.sql  (+7 more)
systemd/: pallet-video.service
tests/: test_barcode.py  test_cloud.py  test_config.py  test_filenames.py  test_hardware_scanner.py  test_log_safety.py  test_motion.py  test_preview.py  test_provisioning.py  test_scanner.py  test_scanner_schedule.py  test_software_update.py  test_status_light.py  test_uploader.py
updates/: palletproof-update.json
web/: .env.example  README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  types.ts  (+2 more)
(+2 files in other folders)
